# key2gksrmf

./: .gitignore  Cargo.toml  README.md  build.rs
.cursor/plans/: single-instance-app_ec7174d7.plan.md
.cursor/rules/: project-standards.mdc
assets/icons/: gksrmf.rc
doc/: app-detailed-design.md
doc/issues/: 01-input-model-physical-key.md  02-backspace-compose-tail.md  03-han-eng-mode-toggle.md  04-embedded-korean-font.md  05-ui-window-behavior.md  06-unicode-clipboard.md  07-deferred-features.md  08-open-checks.md  issues.md
src/: config_store.rs  editor_window.rs  font_manager.rs  hangul_engine.rs  main.rs  startup_registry.rs  tray_manager.rs
