[package]
name = "gksrmf"
version = "0.1.112"
edition = "2021"

[[bin]]
name = "gksrmf"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
]

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
embed-resource = "3.0.9"
